tree-sitter-darklang/grammar.js
    source_file: $ =>
      seq(
        // all type and fn and value defs first
        repeat(choice($.module_decl, $.type_decl, $.fn_decl, $.val_decl)),

        // then the expressions to evaluate, in order
        optional($.expression),
      ),

    type_params: $ =>
      seq(
        field("symbol_open_angle", alias(token.immediate("<"), $.symbol)),
        field("params", $.type_params_items),
        field("symbol_close_angle", alias(token.immediate(">"), $.symbol)),
      ),
    type_params_items: $ =>
      seq(
        $.variable_type_reference,
        repeat(
          seq(
            field("symbol_comma", alias(",", $.symbol)),
            $.variable_type_reference,
          ),
        ),
      ),

    // ---------------------
    // Module declarations
    // ---------------------
    fn_decl_params: $ => repeat1(choice($.unit, $.fn_decl_param)),
    fn_decl_param: $ =>
      seq(
        field("symbol_left_paren", alias("(", $.symbol)),
        field("identifier", $.variable_identifier),
        field("symbol_colon", alias(":", $.symbol)),
        field("typ", $.type_reference),
        field("symbol_right_paren", alias(")", $.symbol)),
      ),

    // ---------------------
    // Type declarations
    // ---------------------
    _atom: $ =>
      choice(
        $.unit,
        $.bool_literal,
        $.int8_literal,
        $.uint8_literal,
        $.int16_literal,
        $.uint16_literal,
        $.int32_literal,
        $.uint32_literal,
        $.int64_literal,
        $.uint64_literal,
        $.int128_literal,
        $.uint128_literal,
        $.bigint_literal,
        $.float_literal,
        $.string_segment,
        $.char_literal,
        $.list_literal,
        $.dict_literal,
        $.record_literal,
        $.enum_literal,
        $.variable_identifier,
        $.field_access,
        $.tuple_literal,
        $.record_update,
        $.qualified_val_or_fn_name,
        $.dbReference,
        $.paren_expression,
      ),

    // operand/value tier: an atom, a function application, or an infix chain.
    // `apply` is included so applications can be infix operands and values.
    simple_expression: $ =>
      choice(
        $._atom,
        $.apply,
        $.infix_operation,
      ),

    expression: $ =>
      choice(
        // `apply` is reachable via `simple_expression`; not listed separately
        // here (that would make it derivable two ways → grammar conflict).
        $.simple_expression,

        $.if_expression,
        $.let_expression,

        $.match_expression,

        $.lambda_expression,
        $.pipe_expression,
        $.statement,
      ),

    paren_expression: $ =>
      seq(
        field("symbol_left_paren", alias("(", $.symbol)),
        field("expr", $.expression),
        field("symbol_right_paren", alias(")", $.symbol)),
      ),

    bool_literal: $ => choice(/true/, /false/),

    //
    // Integers
    //CLEANUP: we are using .NET suffixes for integers (e.g. `1L` for Int64) temporarily until we remove the old parser.

    digits: $ => choice($.positive_digits, $.negative_digits),
    positive_digits: $ => /\d+/,

    int64_literal: $ =>
      seq(field("digits", $.digits), field("suffix", alias("L", $.symbol))),

    list_literal: $ => list_literal_base($, $.list_content),
    list_content: $ => list_content_base($, $.expression),

    //
    // Dict
    tuple_literal: $ =>
      tuple_literal_base($, $.expression, $.tuple_literal_the_rest),
    infix_operation: $ =>
      // given `1 + 2 * 3`, this will parse as `1 + (2 * 3)`
      choice(
        // Power
        prec.right(
          PREC.EXPONENT,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(exponentOperator, $.operator)),
            field("right", $.simple_expression),
          ),
        ),

        // multiplication, division, modulo
        prec.left(
          PREC.PRODUCT,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(multiplicativeOperators, $.operator)),
            field("right", $.simple_expression),
          ),
        ),

        // addition, subtraction
        prec.left(
          PREC.SUM,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(additiveOperators, $.operator)),
            field("right", $.simple_expression),
          ),
        ),

        // Comparison
        prec.left(
          PREC.COMPARISON,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(comparisonOperators, $.operator)),
            field("right", $.simple_expression),
          ),
        ),

        // Logical operations
        prec.left(
          PREC.LOGICAL_AND,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(logicalOperators, $.operator)),
            field("right", $.simple_expression),
          ),
        ),
        prec.left(
          PREC.LOGICAL_OR,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(logicalOperators, $.operator)),
            field("right", $.simple_expression),
          ),
        ),

        // String concatenation
        prec.left(
          PREC.SUM,
          seq(
            field("left", $.simple_expression),
            field("operator", alias(stringConcatOperator, $.operator)),
            field("right", $.simple_expression),
          ),
        ),
      ),

    //
    // If expressions
    if_expression: $ =>
      prec.right(
        seq(
          field("keyword_if", alias("if", $.keyword)),
          field("condition", $.expression),
          field("keyword_then", alias("then", $.keyword)),
          choice(
            seq(
              $.indent,
              repeat1(field("then_expression", $.expression)),
              $.dedent,
            ),
            field("then_expression", $.expression),
          ),
          optional(
            seq(
              field("keyword_else", alias("else", $.keyword)),
              choice(
                seq(
                  $.indent,
                  repeat(field("else_expression", $.expression)),
                  $.dedent,
                ),
                field("else_expression", $.expression),
              ),
            ),
          ),
        ),
      ),

    // field access
    // e.g. `person.name`
    lp_tuple: $ => tuple_literal_base($, $.let_pattern, $.let_pattern_the_rest),
    let_pattern: $ => choice($.unit, $.lp_tuple, $.variable_identifier),

    //
    // Let expression
    let_expression: $ =>
      seq(
        field("keyword_let", alias("let", $.keyword)),
        choice(
          // a nested function definition: `let f (x: Int64) : Int64 = ...`. Only
          // a plain variable can name a fn (not unit or a tuple pattern). The
          // params/return-type are parsed but dropped when desugaring to a lambda
          // (lambdas are untyped); see parser/expr.dark.
          seq(
            field("fn_name", $.variable_identifier),
            optional(field("type_params", $.type_params)),
            field("params", $.fn_decl_params),
            field("symbol_colon", alias(":", $.symbol)),
            field("return_type", $.type_reference),
          ),
          // a plain let binding: `let <pattern> = ...`
          field("pattern", $.let_pattern),
        ),
        field("symbol_equals", alias("=", $.symbol)),
        choice(
          seq(field("expr", $.expression), "\n"),
          seq($.indent, field("expr", $.expression), $.dedent, optional("\n")),
        ),
        field("body", $.expression),
      ),

    //
    // Match expression
    // TODO : allow one-line match expressions (i.e. match x with | 1 -> ...)
    apply: $ =>
      prec.right(
        seq(
          // TODO: fn should be an expression
          field("fn", $.qualified_fn_name),
          choice(
            seq(
              // args are `_atom`s (not `simple_expression`) so application
              // binds tighter than infix: `f a + b` is `(f a) + b`, and an
              // operator stops arg collection so `f x ++ g y` is `(f x) ++ (g y)`.
              field("args", repeat1($._atom)),
              optional($._function_boundary),
            ),
            seq(
              $.indent,
              field("args", seq($.expression, repeat(seq(/\n/, $.expression)))),
              $.dedent,
            ),
          ),
        ),
      ),

    // ---------------------
    // Pipe expressions
    // ---------------------

    //
    // Pipe lambda
    operator: $ =>
      choice(
        exponentOperator,
        multiplicativeOperators,
        additiveOperators,
        comparisonOperators,
        logicalOperators,
        stringConcatOperator,
      ),

    pipe_fn_call: $ =>
      prec.right(
        seq(
          field("fn", $.qualified_fn_name),
          field("args", repeat($.simple_expression)),
          optional($._function_boundary),
        ),
      ),

    //
    // Pipe enum
    pipe_enum: $ => enum_literal_base($, $.pipe_enum_fields),
    pipe_expr: $ =>
      choice($.pipe_lambda, $.pipe_infix, $.pipe_fn_call, $.pipe_enum),

    pipe_exprs: $ =>
      prec.left(
        seq(
          field("symbol_pipe", alias("|>", $.symbol)),
          field("pipe_expr", $.pipe_expr),
        ),
      ),

    pipe_expression: $ =>
      prec.left(
        PREC.PIPE_EXPR,
        seq(
          field("expr", $.expression),
          repeat1(field("pipe_exprs", $.pipe_exprs)),
        ),
      ),

    // ---------------------
    // Common
    // ---------------------
    type_reference: $ => choice($.builtin_type, $.qualified_type_name),

    builtin_type: $ =>
      choice(
        /Unit/,
        /Bool/,
        /Int8/,
        /UInt8/,
        /Int16/,
        /UInt16/,
        /Int32/,
        /UInt32/,
        /Int64/,
        /UInt64/,
        /Int128/,
        /UInt128/,
        /Int/,
        /Float/,
        /Char/,
        /String/,
        /DateTime/,
        /Uuid/,
        /Blob/,
        $.list_type_reference,
        $.stream_type_reference,
        $.tuple_type_reference,
        $.dict_type_reference,
        $.fn_type_reference,
        $.variable_type_reference,

        $.db_type_reference,
      ),

    //
    // List<T>
    list_type_reference: $ =>
      seq(
        field("keyword_type_constructor", alias("List", $.keyword)),
        field("symbol_open_angle", alias("<", $.symbol)),
        field("typ_param", $.type_reference),
        field("symbol_close_angle", alias(">", $.symbol)),
      ),

    //
    // Stream<T>
    variable_type_reference: $ =>
      seq(
        field("symbol_single_quote", alias("'", $.symbol)),
        field("variable", $.variable_identifier),
      ),

    // ---------------------
    // Identifiers
    // ---------------------
    qualified_fn_name: $ =>
      seq(
        seq(
          repeat(seq($.module_identifier, alias(".", $.symbol))),
          $.fn_identifier,
        ),
        optional(field("type_args", $.type_args)),
      ),

    qualified_type_name: $ =>
      prec(
        1,
        seq(
          seq(
            repeat(seq($.module_identifier, alias(".", $.symbol))),
            field("type_identifier", $.type_identifier),
          ),
          optional(field("type_args", $.type_args)),
        ),
      ),

    module_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,

    // e.g. `Person` in `type MyPerson = ...`
    type_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,

    // e.g. `newline` in `val newline = '\n'`
    fn_identifier: $ => prec(PREC.FN_IDENTIFIER, /[a-z_][a-zA-Z0-9_']*/),

    /** e.g. `x` in `let double (x: Int) = x + x`
     *
     * for let bindings, params, etc. */
    variable_identifier: $ => prec(PREC.VAR_IDENTIFIER, /[a-z_][a-zA-Z0-9_']*/),

    // e.g. `Dict { ``Content-Length`` } = "0"`
    enum_case_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,
