tree-sitter-darklang/test/corpus/exhaustive/exprs/let_expr.txt
==================
simple let_expression
==================

let x = 1L
x

---

(source_file
  (expression
    (let_expression
      (keyword) (let_pattern (variable_identifier)) (symbol)
      (expression (simple_expression (int64_literal (digits (positive_digits)) (symbol))))
      (expression (simple_expression (variable_identifier)))
    )
  )
)


==================
simple let_expression -with indent
==================

let x =
  1L
x

---

(source_file
  (expression
    (let_expression
      (keyword) (let_pattern (variable_identifier)) (symbol)
      (indent)
      (expression (simple_expression (int64_literal (digits (positive_digits)) (symbol))))
      (dedent)
      (expression (simple_expression (variable_identifier)))
    )
  )
)



==================
let expression with pipes -inline
==================

let x =
  1L |> Stdlib.Option.Option.Some
x

---

(source_file
  (expression
    (let_expression
      (keyword) (let_pattern (variable_identifier)) (symbol)
      (indent)
      (expression
        (pipe_expression
          (expression (simple_expression (int64_literal (digits (positive_digits)) (symbol))))
          (pipe_exprs
            (symbol)
            (pipe_expr
              (pipe_enum
                (qualified_type_name (module_identifier) (symbol) (module_identifier) (symbol) (type_identifier))
                (symbol) (enum_case_identifier)
              )
            )
          )
        )
      )
      (dedent)
      (expression (simple_expression (variable_identifier)))
    )
  )
)


==================
let expression with one pipe -indented
==================

let x =
  1L
  |> Stdlib.Option.Option.Some
x

---

(source_file
  (expression
    (let_expression
      (keyword) (let_pattern (variable_identifier)) (symbol)
      (indent)
      (expression
        (pipe_expression
          (expression (simple_expression (int64_literal (digits (positive_digits)) (symbol))))
          (pipe_exprs
            (symbol)
            (pipe_expr
              (pipe_enum
                (qualified_type_name (module_identifier) (symbol) (module_identifier) (symbol) (type_identifier))
                (symbol) (enum_case_identifier)
              )
            )
          )
        )
      )
      (dedent)
      (expression (simple_expression (variable_identifier)))
    )
  )
)


==================
let expression with multiple pipes -indented
==================

let wtTest =
  testSource
  |> LanguageTools.Parser.TestParsing.initialParse
  |> Test.parseTest
  |> Builtin.unwrap
wtTest

---

(source_file
  (expression
    (let_expression
      (keyword)
      (let_pattern (variable_identifier))
      (symbol)
      (indent)
      (expression
        (pipe_expression
          (expression
            (pipe_expression
              (expression
                (pipe_expression
                  (expression (simple_expression (variable_identifier)))
                  (pipe_exprs
                    (symbol)
                    (pipe_expr
                      (pipe_fn_call
                        (qualified_fn_name (module_identifier) (symbol) (module_identifier) (symbol) (module_identifier) (symbol) (fn_identifier))
                      )
                    )
                  )
                )
              )
              (pipe_exprs
                (symbol)
                (pipe_expr (pipe_fn_call (qualified_fn_name (module_identifier) (symbol) (fn_identifier))))
              )
            )
          )
          (pipe_exprs
            (symbol)
            (pipe_expr
              (pipe_fn_call (qualified_fn_name (module_identifier) (symbol) (fn_identifier)))
            )
          )
        )
      )
      (dedent)
      (expression (simple_expression (variable_identifier)))
    )
  )
)


==================
lp_tuple
==================

let (tokensSoFar, startOfLastToken) = acc
(tokensSoFar, startOfLastToken)

---

(source_file
  (expression
    (let_expression
      (keyword)
      (let_pattern
        (lp_tuple
          (symbol)
          (let_pattern (variable_identifier))
          (symbol)
          (let_pattern (variable_identifier))
          (symbol)
        )
      )
      (symbol)
      (expression (simple_expression (variable_identifier)))
      (expression
        (simple_expression
          (tuple_literal
            (symbol)
            (expression (simple_expression (variable_identifier)))
            (symbol)
            (expression (simple_expression (variable_identifier)))
            (symbol)
          )
        )
      )
    )
  )
)


==================
let expression with fn_call
==================

let x = Stdlib.Int64.add 1L 2L
x

---

(source_file
  (expression
    (let_expression
      (keyword) (let_pattern (variable_identifier)) (symbol)
      (expression
        (simple_expression
          (apply
            (qualified_fn_name (module_identifier) (symbol) (module_identifier) (symbol) (fn_identifier))
            (int64_literal (digits (positive_digits)) (symbol))
            (int64_literal (digits (positive_digits)) (symbol))
          )
        )
      )
      (expression (simple_expression (variable_identifier)))
    )
  )
)


==================
let expression with fn_call -indented
==================

let x =
  Stdlib.Int64.add
    1L
    2L
x

---
(source_file
  (expression
    (let_expression
      (keyword) (let_pattern (variable_identifier)) (symbol)
      (indent)
      (expression
        (simple_expression
          (apply
            (qualified_fn_name (module_identifier) (symbol) (module_identifier) (symbol) (fn_identifier))
            (indent)
            (expression (simple_expression (int64_literal (digits (positive_digits)) (symbol))))
            (expression (simple_expression (int64_literal (digits (positive_digits)) (symbol))))
            (dedent)
          )
        )
      )
      (dedent)
      (expression (simple_expression (variable_identifier)))
    )
  )
)


==================
let expression with if expression
==================

let x = if true then 1L else Stdlib.Int64.add 1L 2L
x
---

(source_file
  (expression
    (let_expression
      (keyword) (let_pattern (variable_identifier)) (symbol)
      (expression
        (if_expression
          (keyword)
          (expression (simple_expression (bool_literal)))
          (keyword)
          (expression (simple_expression (int64_literal (digits (positive_digits)) (symbol))))
          (keyword)
          (expression
            (simple_expression
              (apply
                (qualified_fn_name (module_identifier) (symbol) (module_identifier) (symbol) (fn_identifier))
                (int64_literal (digits (positive_digits)) (symbol))
                (int64_literal (digits (positive_digits)) (symbol))
              )
            )
          )
        )
      )
      (expression (simple_expression (variable_identifier)))
    )
  )
)

==================
let expression with nested function definition
==================

(let double (x: Int64) : Int64 = x * 2L
 double 5L)
---

(source_file
  (expression
    (simple_expression
      (paren_expression
        (symbol)
        (expression
          (let_expression
            (keyword)
            (variable_identifier)
            (fn_decl_params
              (fn_decl_param
                (symbol) (variable_identifier) (symbol)
                (type_reference (builtin_type))
                (symbol)))
            (symbol)
            (type_reference (builtin_type))
            (symbol)
            (expression
              (simple_expression
                (infix_operation
                  (simple_expression (variable_identifier))
                  (operator)
                  (simple_expression
                    (int64_literal (digits (positive_digits)) (symbol))))))
            (expression
              (simple_expression
                (apply
                  (qualified_fn_name (fn_identifier))
                  (int64_literal (digits (positive_digits)) (symbol)))))))
        (symbol)))))

================================================================================
nested function definition - multiple params
================================================================================

(let combine (x: Int64) (y: Int64) : Int64 =
   x + y
 combine 1L 2L)
--------------------------------------------------------------------------------

(source_file
  (expression
    (simple_expression
      (paren_expression
        (symbol)
        (expression
          (let_expression
            (keyword)
            (variable_identifier)
            (fn_decl_params
              (fn_decl_param
                (symbol)
                (variable_identifier)
                (symbol)
                (type_reference
                  (builtin_type))
                (symbol))
              (fn_decl_param
                (symbol)
                (variable_identifier)
                (symbol)
                (type_reference
                  (builtin_type))
                (symbol)))
            (symbol)
            (type_reference
              (builtin_type))
            (symbol)
            (indent)
            (expression
              (simple_expression
                (infix_operation
                  (simple_expression
                    (variable_identifier))
                  (operator)
                  (simple_expression
                    (variable_identifier)))))
            (dedent)
            (expression
              (simple_expression
                (apply
                  (qualified_fn_name
                    (fn_identifier))
                  (int64_literal
                    (digits
                      (positive_digits))
                    (symbol))
                  (int64_literal
                    (digits
                      (positive_digits))
                    (symbol)))))))
        (symbol)))))

================================================================================
nested function definition - unit param
================================================================================

(let getFive () : Int64 = 5L
 getFive ())
--------------------------------------------------------------------------------

(source_file
  (expression
    (simple_expression
      (paren_expression
        (symbol)
        (expression
          (let_expression
            (keyword)
            (variable_identifier)
            (fn_decl_params
              (unit))
            (symbol)
            (type_reference
              (builtin_type))
            (symbol)
            (expression
              (simple_expression
                (int64_literal
                  (digits
                    (positive_digits))
                  (symbol))))
            (expression
              (simple_expression
                (apply
                  (qualified_fn_name
                    (fn_identifier))
                  (unit))))))
        (symbol)))))

================================================================================
nested function definition - generic type annotations
================================================================================

(let rev (list: List<'a>) (acc: List<'a>) : List<'a> =
   acc
 rev [ 1L ] [])
--------------------------------------------------------------------------------

(source_file
  (expression
    (simple_expression
      (paren_expression
        (symbol)
        (expression
          (let_expression
            (keyword)
            (variable_identifier)
            (fn_decl_params
              (fn_decl_param
                (symbol)
                (variable_identifier)
                (symbol)
                (type_reference
                  (builtin_type
                    (list_type_reference
                      (keyword)
                      (symbol)
                      (type_reference
                        (builtin_type
                          (variable_type_reference
                            (symbol)
                            (variable_identifier))))
                      (symbol))))
                (symbol))
              (fn_decl_param
                (symbol)
                (variable_identifier)
                (symbol)
                (type_reference
                  (builtin_type
                    (list_type_reference
                      (keyword)
                      (symbol)
                      (type_reference
                        (builtin_type
                          (variable_type_reference
                            (symbol)
                            (variable_identifier))))
                      (symbol))))
                (symbol)))
            (symbol)
            (type_reference
              (builtin_type
                (list_type_reference
                  (keyword)
                  (symbol)
                  (type_reference
                    (builtin_type
                      (variable_type_reference
                        (symbol)
                        (variable_identifier))))
                  (symbol))))
            (symbol)
            (indent)
            (expression
              (simple_expression
                (variable_identifier)))
            (dedent)
            (expression
              (simple_expression
                (apply
                  (qualified_fn_name
                    (fn_identifier))
                  (list_literal
                    (symbol)
                    (list_content
                      (expression
                        (simple_expression
                          (int64_literal
                            (digits
                              (positive_digits))
                            (symbol)))))
                    (symbol))
                  (list_literal
                    (symbol)
                    (symbol)))))))
        (symbol)))))

================================================================================
nested function definition - indented recursive body
================================================================================

(let fact (n: Int64) : Int64 =
   if n <= 1L then 1L else fact (n - 1L)
 fact 5L)
--------------------------------------------------------------------------------

(source_file
  (expression
    (simple_expression
      (paren_expression
        (symbol)
        (expression
          (let_expression
            (keyword)
            (variable_identifier)
            (fn_decl_params
              (fn_decl_param
                (symbol)
                (variable_identifier)
                (symbol)
                (type_reference
                  (builtin_type))
                (symbol)))
            (symbol)
            (type_reference
              (builtin_type))
            (symbol)
            (indent)
            (expression
              (if_expression
                (keyword)
                (expression
                  (simple_expression
                    (infix_operation
                      (simple_expression
                        (variable_identifier))
                      (operator)
                      (simple_expression
                        (int64_literal
                          (digits
                            (positive_digits))
                          (symbol))))))
                (keyword)
                (expression
                  (simple_expression
                    (int64_literal
                      (digits
                        (positive_digits))
                      (symbol))))
                (keyword)
                (expression
                  (simple_expression
                    (apply
                      (qualified_fn_name
                        (fn_identifier))
                      (paren_expression
                        (symbol)
                        (expression
                          (simple_expression
                            (infix_operation
                              (simple_expression
                                (variable_identifier))
                              (operator)
                              (simple_expression
                                (int64_literal
                                  (digits
                                    (positive_digits))
                                  (symbol))))))
                        (symbol)))))))
            (dedent)
            (expression
              (simple_expression
                (apply
                  (qualified_fn_name
                    (fn_identifier))
                  (int64_literal
                    (digits
                      (positive_digits))
                    (symbol)))))))
        (symbol)))))

================================================================================
nested function sugar on a non-variable pattern is invalid
================================================================================

(let () (x: Int64) : Int64 = x
 5L)
--------------------------------------------------------------------------------

(source_file
  (ERROR
    (symbol)
    (keyword)
    (let_pattern
      (unit))
    (ERROR
      (symbol)
      (symbol)
      (symbol)
      (symbol))
    (symbol)
    (simple_expression
      (apply
        (qualified_fn_name
          (fn_identifier))
        (indent)
        (expression
          (simple_expression
            (int64_literal
              (digits
                (positive_digits))
              (symbol))))
        (dedent)))
    (symbol)))

================================================================================
nested function definition - explicit type params
================================================================================

(let identity<'a> (x: 'a) : 'a =
   x
 identity 5L)
--------------------------------------------------------------------------------

(source_file
  (expression
    (simple_expression
      (paren_expression
        (symbol)
        (expression
          (let_expression
            (keyword)
            (variable_identifier)
            (type_params
              (symbol)
              (type_params_items
                (variable_type_reference
                  (symbol)
                  (variable_identifier)))
              (symbol))
            (fn_decl_params
              (fn_decl_param
                (symbol)
                (variable_identifier)
                (symbol)
                (type_reference
                  (builtin_type
                    (variable_type_reference
                      (symbol)
                      (variable_identifier))))
                (symbol)))
            (symbol)
            (type_reference
              (builtin_type
                (variable_type_reference
                  (symbol)
                  (variable_identifier))))
            (symbol)
            (indent)
            (expression
              (simple_expression
                (variable_identifier)))
            (dedent)
            (expression
              (simple_expression
                (apply
                  (qualified_fn_name
                    (fn_identifier))
                  (int64_literal
                    (digits
                      (positive_digits))
                    (symbol)))))))
        (symbol)))))
